After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 742980 - cannot start broadway on FreeBSD
cannot start broadway on FreeBSD
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Backend: Broadway
3.14.x
Other FreeBSD
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2015-01-15 16:15 UTC by Dave Green
Modified: 2015-01-18 20:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
suppress posix_fallocate() on FreeBSD (384 bytes, patch)
2015-01-15 16:15 UTC, Dave Green
none Details | Review
use abstract sockets only on linux (1.81 KB, patch)
2015-01-15 16:17 UTC, Dave Green
none Details | Review

Description Dave Green 2015-01-15 16:15:47 UTC
Created attachment 294605 [details] [review]
suppress posix_fallocate() on FreeBSD

Starting broadwayd on FreeBSD 10.1 fails with the output "Abstract unix domain socket addresses not supported on this system".

Broadway uses either TCP or abstract Unix domain sockets dependent upon definition the macro G_OS_UNIX. Abstract domain sockets are supported only on Linux but G_OS_UNIX is defined on a number of other platforms.

The attached patch against 3.14.7 (current version in FreeBSD ports) changes G_OS_UNIX to __linux__ for cases when testing for functionality specific to linux. An alternative approach could be implemented using g_unix_socket_address_abstract_names_supported().

Additionally the posix_fallocate() check added in commit 8084e6e4 fails on FreeBSD fails with ENODEV as the passed file descriptor must be a regular file. Attached patch disables this check when the macro __FreeBSD__ is defined.
Comment 1 Dave Green 2015-01-15 16:17:39 UTC
Created attachment 294606 [details] [review]
use abstract sockets only on linux
Comment 2 Matthias Clasen 2015-01-18 20:18:27 UTC
I've fixed the posix_fallocate issue with a different patch,
checking for ENOSPC instead.
Comment 3 Matthias Clasen 2015-01-18 20:25:49 UTC
Fixed the abstract socket issue by using
g_unix_socket_address_abstract_names_supported